# Origin-DB-Simulator

./: .editorconfig  .gitattributes  .gitignore  Makefile  README.md  TESTING.md  rustfmt.toml
block-system/: Cargo.toml  README.md
block-system/benches/: block_benchmarks.rs
block-system/docs/: 00-OVERVIEW.md  01-CORE-COMPONENTS-RUST.md  02-BLOCK-CATEGORIES.md  03-IMPLEMENTATION-PLAN.md  04-EXAMPLES-RUST.md  05-RUST-IMPLEMENTATION-GUIDE.md
block-system/src/: lib.rs  wasm_api.rs
block-system/src/categories/: mod.rs
block-system/src/categories/buffer/: clock_buffer.rs  lru_buffer.rs  mod.rs
block-system/src/categories/compression/: dictionary_encoding.rs  mod.rs
block-system/src/categories/concurrency/: mod.rs  mvcc.rs  row_lock.rs
block-system/src/categories/distribution/: mod.rs  replication.rs
block-system/src/categories/execution/: filter.rs  hash_join.rs  index_scan.rs  mod.rs  sequential_scan.rs  sort.rs
block-system/src/categories/index/: btree.rs  covering_index.rs  hash_index.rs  mod.rs
block-system/src/categories/optimization/: bloom_filter.rs  mod.rs  statistics_collector.rs
block-system/src/categories/partitioning/: hash_partitioner.rs  mod.rs
block-system/src/categories/storage/: clustered.rs  columnar.rs  heap_file.rs  lsm_tree.rs  mod.rs
block-system/src/categories/transaction/: mod.rs  wal.rs
block-system/src/core/: block.rs  constraint.rs  metrics.rs  mod.rs  parameter.rs  port.rs  registry.rs
block-system/src/runtime/: engine.rs  mod.rs  timer.rs  validation.rs  workload.rs
block-system/src/tests/: core_tests.rs  example_blocks.rs  integration.rs  mod.rs  parameter_tests.rs  port_tests.rs  property_tests.rs
docs/: NEXT-PHASE-PLAN.md  (+4 more)
(+78 files in other folders)
