[package]
name = "block-system"
version = "0.1.0"
edition = "2021"
description = "Block System implementation for Modular DB Builder"
repository = "https://github.com/your-org/db-simulator"
license = "MIT"

[dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
parking_lot = "0.12"
crossbeam = "0.8"
bytes = "1.5"
anyhow = "1.0"

[dev-dependencies]
criterion = "0.5"
proptest = "1.0"
tempfile = "3.0"

[lib]
path = "src/lib.rs"
