[package]
name = "block-system"
version = "0.1.0"
edition = "2021"
description = "Block System implementation for Modular DB Builder"
repository = "https://github.com/your-org/db-simulator"
license = "MIT"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
parking_lot = "0.12"
anyhow = "1.0"

# WASM-only dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"
getrandom = { version = "0.2", features = ["js"] }
uuid = { version = "1.0", features = ["v4", "serde", "js"] }

[dev-dependencies]
criterion = "0.5"
proptest = "1.0"
tempfile = "3.0"
tokio = { version = "1", features = ["full"] }

[[bench]]
name = "block_benchmarks"
harness = false

[profile.release]
opt-level = "s"
lto = true
